--- a/Session1-Kazan.Android/Properties/AndroidManifest.xml
+++ b/Session1-Kazan.Android/Properties/AndroidManifest.xml
@@ -4,4 +4,5 @@
   <application android:label="Session1_Kazan.Android"></application>
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
   <uses-feature android:name="android.hardware.camera" />
+  <uses-permission android:name="android.permission.CAMERA" />
 </manifest>
